alignment fixes

--- a/web/assets/picluster-iframe.css
+++ b/web/assets/picluster-iframe.css
@@ -235,7 +235,8 @@ fieldset {
 
 #submit_button {
   display: inline;
-  padding: 2px 14px;
+  font-size: 16px;
+  padding: 10px 14px;
   text-align: center;
 }
 
